kubernetes/apps/automation/frigate/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
spec:
  hostnames:
    - "frigate.internal.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: frigate
          port: 5000
